fix: order creation endpoint
